Add test function game_number and change makefile

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: c
 install: 
   - sudo apt-get install gtk2.0
 compiler: gcc
-script: make
+script: 
+  - make
+  - make test
+  - build/test/test
